# entropic

./: .dockerignore  .doxygen-guard.yaml  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  ENTROPI.md  ENTROPI_INTEGRATION.md  LICENSE  NOTICE  OLD_NOTES.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yaml  install.sh  new_model_links.txt  pyproject.toml  sum_list.py  tasks.py
examples/explorer/: .gitignore  CMakeLists.txt  default_config.yaml  main.cpp  main_wrapper.py
examples/explorer/data/: architecture_topics.yaml
examples/headless/: .gitignore  .mcp.json  CMakeLists.txt  default_config.yaml  main.c  test_server.py
examples/hello-world/: CMakeLists.txt  README.md  config.yaml  default_config.yaml  main.c  main.py  main_wrapper.py  requirements.txt
examples/openai-server/: CMakeLists.txt  README.md
examples/pychess/: CMakeLists.txt  README.md  chess_server.py  config.py  default_config.yaml  engine.py  main.cpp  main.py  main_wrapper.py  requirements.txt  tier.py
packaging/smoke-consumer/: CMakeLists.txt  smoke.cpp
src/cli/: CMakeLists.txt  download.cpp  main.cpp  mcp_bridge.cpp  mcp_connect.cpp  version.cpp
src/config/: CMakeLists.txt  bundled_models.cpp  data_dir.cpp  env_overrides.cpp  loader.cpp  validate.cpp  yaml_util.cpp  yaml_util.h
src/core/: CMakeLists.txt  compaction.cpp  compactor_registry.cpp  constitutional_validator.cpp  context_manager.cpp  delegation.cpp  directives.cpp  engine.cpp  engine_types.cpp  hook_registry.cpp  identity_manager.cpp  response_generator.cpp  sandbox.cpp  stream_think_filter.cpp  worktree.cpp
src/facade/: CMakeLists.txt  conversation_state.h  engine_handle.h  entropic.cpp  entropic_audit.cpp  entropic_compaction.cpp  entropic_hooks.cpp  entropic_identity.cpp  entropic_mcp.cpp  entropic_storage.cpp  external_bridge.cpp  json_serializers.h  utf8_safe.h
src/inference/: CMakeLists.txt  adapter_manager.cpp  backend.cpp  batch_util.h  grammar_registry.cpp  image_preprocessor.cpp  inference_c_api.cpp  interface_factory.cpp  llama_cpp_backend.cpp  llama_cpp_backend.h  llama_cpp_sampler.cpp  llama_cpp_sampler.h  llama_cpp_tokenizer.cpp  llama_cpp_tokenizer.h  mtp_envelope.h  orchestrator.cpp  profile_registry.cpp  prompt_cache.cpp  prompt_cache.h  secondary_model_loader.cpp  speculative_compat.cpp  throughput_tracker.cpp  tool_call_markers.h  tool_call_serialize.h  warm_keep_util.h
src/mcp/: CMakeLists.txt  external_client.cpp  health_monitor.cpp  mcp_authorization.cpp  mcp_c_api.cpp  mcp_json_discovery.cpp  mcp_key_set.cpp  permission_manager.cpp  reconnect_policy.cpp  server_base.cpp  server_manager.cpp  tool_base.cpp  tool_call_history.cpp  tool_executor.cpp  tool_registry.cpp  tool_result_classify.cpp  transport_sse.cpp  transport_stdio.cpp  utf8_sanitize.cpp
src/prompts/: CMakeLists.txt  classification.cpp  manager.cpp
src/storage/: CMakeLists.txt  audit_entry.cpp  audit_logger.cpp  backend.cpp  c_interface.cpp  database.cpp  logger.cpp  permission_persister.cpp
src/types/: CMakeLists.txt  config.cpp  content.cpp  error.cpp  logging.cpp  messages_json.cpp  session_logger.cpp
tests/: CMakeLists.txt  README.md  __init__.py  conftest.py  valgrind.supp
tests/benchmark/: CMakeLists.txt
tests/concurrency/: CMakeLists.txt  test_thread_safety.cpp
tests/data/: bundled_models.yaml  comprehensive_config.yaml  consumer_replace_config.yaml  minimal_config.yaml  overlay_config.yaml  test_config.yaml
tests/distribution-smoke-consumer/: CMakeLists.txt  smoke.cpp
tests/edge/: CMakeLists.txt  test_config_edge_cases.cpp  test_malformed_tool_calls.cpp
tests/helpers/: CMakeLists.txt  mock_mcp_server.cpp
tests/integration/: CMakeLists.txt  __init__.py  test_docker.py  test_external_mcp.cpp  test_library_consumer.py  test_storage_integration.cpp
tests/manual/: README.md
tests/model/: CMakeLists.txt  __init__.py  conftest.py  engine_test_helpers.h  facade_model_helpers.h  gh87_verify_helpers.h  model_test_context.h  production_emission_helpers.h  routing_config.yaml  test_adapter_lifecycle.cpp  test_audit_log.cpp  test_backend_capabilities.cpp  test_basic_generation.cpp  test_constitutional_validation.cpp  test_context_retention.cpp  test_delegation.cpp  test_delegation_context_bleed.cpp  test_dynamic_identity.cpp  test_e0_true_e2e.cpp  test_e10_custom_compactor.cpp  test_e1_single_turn.cpp  test_e2_tool_call.cpp  test_e3_routing.cpp  test_e4_multi_turn.cpp  test_e5_compaction.cpp  test_e6_state_transitions.cpp  test_e7_delegation.cpp  test_e8_mcp_auth.cpp  test_e9_dynamic_identity.cpp  test_external_mcp.cpp  test_gh100_q8_kv.cpp  test_gh103_gemma_sequential.cpp  test_gh103_sequential_stop.cpp  test_gh105_validator_clobbers.cpp  test_gh106_mtp.cpp  test_gh106_mtp_qat_mobile.cpp  test_gh106_mtp_route.cpp  test_gh106_qat_thinking.cpp  test_gh108_agentic_benchmark.cpp  test_gh108_config_benchmark.cpp  (+50 more)
tests/regression/: CMakeLists.txt  test_basic_response.cpp  test_delegation_pipeline.cpp  test_identity_behavior.cpp  test_multi_turn_context.cpp  test_router_classification.cpp  test_tool_calling_loop.cpp
tests/stress/: CMakeLists.txt
tests/unit/: CMakeLists.txt  __init__.py  test_api_version.cpp  test_base_tool.py  test_bash_command_scoping.py  test_benchmark_gpu.py  test_benchmark_runner.py  test_bindings_abi.py  test_bundled_models.cpp  test_commands.py  test_compaction.py  test_config.py  test_config_loader.cpp  test_config_validate.cpp  test_delegation.py  test_diagnostics_wait.py  test_directives.py  test_display_logger.py  test_engine.py  test_engine_auto_chain.py  test_engine_feedback_roles.py  test_engine_tool_format.py  test_entropi_server.py  test_entropic_server.py  test_filesystem_tilde.py  test_filesystem_tools.py  test_gen_bindings.py  test_generate_wrapper.py  test_gpu_check.py  test_header_c99.c  test_headless.py  test_hook_stub.cpp  test_inference.py  test_library_api.py  test_llama_cpp_grammar.py  test_logging.cpp  test_mcp.py  test_mcp_runtime.py  test_mcp_servers.py  test_model_logger.py  (+19 more)
(+3074 files in other folders)
