[project]
name = "entropic-engine"
version = "2.0.5"
description = "Local-first agentic inference engine with tier-based model routing"
readme = "README.md"
license = {text = "LGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Tristan VanFossen"}
]
keywords = ["ai", "coding", "assistant", "llm", "local", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
entropic = "entropic.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
entropic = [
    "lib/librentropic.so",
    "data/*.yaml",
    "data/prompts/*.md",
    "data/grammars/*.gbnf",
    "data/tools/**/*.json",
]

[tool.ruff]
line-length = 100
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["entropic.cli", "entropic.cli_download"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Fast tests without external dependencies",
    "integration: Tests requiring external services",
    "model: Tests requiring actual model inference (GPU recommended)",
    "slow: Tests that take a long time to run",
]
