# SPDX-License-Identifier: LGPL-3.0-or-later
[project]
name = "entropic-engine"
version = "2.1.0"
description = "Local-first agentic inference engine — Python wrapper over librentropic.so"
readme = "README.md"
license = {text = "LGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Tristan VanFossen"}
]
keywords = ["ai", "coding", "assistant", "llm", "local", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

# v2.1.0 wrapper has no required runtime deps — pure stdlib (ctypes,
# urllib, hashlib, tarfile). The native engine is fetched on demand by
# `entropic install-engine`.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "gcovr>=7.0",  # used by the inv check-coverage gate
    "invoke>=2.0",
]

[project.scripts]
entropic = "entropic.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# v2.1.0: package source moved to python/src/entropic. The wheel contains
# only Python — no native artifacts. librentropic.so is fetched at runtime
# via `entropic install-engine` (playwright pattern).
[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
entropic = ["py.typed"]

[tool.ruff]
line-length = 100
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Fast tests without external dependencies",
    "integration: Tests requiring external services",
    "model: Tests requiring actual model inference (GPU recommended)",
    "slow: Tests that take a long time to run",
]
