# SPDX-License-Identifier: LGPL-3.0-or-later
[project]
name = "entropic-engine"
# v2.1.2 (#4): version is read from the repo-root VERSION file at sdist /
# wheel build time. Single source of truth shared with CMakeLists.txt,
# the doxygen workflow, and the api_version_test runtime check.
dynamic = ["version"]
description = "Local-first agentic inference engine — Python wrapper over librentropic.so"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Tristan VanFossen"}
]
keywords = ["ai", "coding", "assistant", "llm", "local", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

# v2.1.0 wrapper has no required runtime deps — pure stdlib (ctypes,
# urllib, hashlib, tarfile). The native engine is fetched on demand by
# `entropic install-engine`.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "gcovr>=7.0",  # used by the inv check-coverage gate
    "invoke>=2.0",
]

[project.scripts]
entropic = "entropic.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# v2.1.0: package source moved to python/src/entropic. The wheel contains
# only Python — no native artifacts. librentropic.so is fetched at runtime
# via `entropic install-engine` (playwright pattern).
[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
entropic = ["py.typed"]

# v2.1.2 (#4): dynamic version reads the single-source VERSION file.
# setuptools strips trailing whitespace, so the trailing newline in
# VERSION (POSIX-correct) is fine.
[tool.setuptools.dynamic]
version = {file = "VERSION"}

# Hook-driven tooling (ruff, flake8, pytest) is configured in
# .pre-commit-config.yaml — pre-commit is the source of truth. This
# file deliberately carries no [tool.ruff], [tool.mypy], or
# [tool.pytest.ini_options] sections. If you find yourself wanting
# one, add it to the pre-commit hook's args list instead so the gate
# config sits in one place.
